# life

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  cmdline-life.c  cmdline-life.h  config.h.in  configure  configure.ac  configure.scan  life-1.5.2.tar.gz.sig  life-1.5.3.tar.gz.sig  life-1.5.4.tar.gz.sig  life-1.6.0.tar.gz.sig  life-macros.h  life.6  life.c  life.ggo  life.h  life.man  life.texi  menus.c  menus.h  rulestoint.py  updatemap.c  updatemap.h
docs/: Makefile.am  Makefile.in  life.6.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  board.c  board.h  cmdline-life.c  correct_curses.h  foreach.h  getopt.c  getopt.h  life-macros.h  life.c  life.ggo  life.h  menus.c  menus.h  test_board.c  updatemap.c  updatemap.h
test/: Makefile.am  Makefile.in  blank.sh  sanity
test/.deps/: ncursesbasic.Po
