# Makefile stuff
include_directories(.)
add_library(board board.c board.h)
target_compile_features(board PUBLIC c_function_prototypes)
if (UNIX)
# target_link_libraries(board m)
endif()
add_executable(life life.c life.h board updatemap.c updatemap.h menus.c menus.h)
add_executable(test_board test_board.c board)
target_compile_features(life PUBLIC c_function_prototypes c_variadic_macros)
target_compile_features(test_board PRIVATE c_std_99)
target_include_directories(life PRIVATE "${CURSES_INCLUDE_DIRS}")
target_link_libraries(life "${CURSES_LIBRARIES}")
